# email-sender

./: .gitignore  Cargo.toml  README.md  email.ps1  makefile  toolchain.toml
email_backend/: email_backend.py
src/: lib.rs  main.rs
