[package]
name = "email-sender"
version = "0.4.2"
edition = "2021"

[profile.release]
strip = true # Automatically strip symbols from the binary
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
eframe = "0.23.0"
egui = "0.23.0"
egui_extras = "0.23.0"
rfd = "0.12.1"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
