[package]
name = "email-sender"
version = "1.0.0"
edition = "2021"

[profile.release]
strip = true # Automatically strip symbols from the binary
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
eframe = "0.24.1"
egui = "0.24.1"
egui_extras = "0.24.1"
rfd = "0.12.1"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.108"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
