[package]
name = "email-sender"
version = "1.1.1"
edition = "2021"

[profile.release]
strip = true # Automatically strip symbols from the binary
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"
rfd = "0.14.1"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34+deprecated"
thiserror = "1.0.59"
